--- a/MYScorekeeper/styles.css
+++ b/MYScorekeeper/styles.css
@@ -1,4 +1,152 @@
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+html {
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+}
+
+@font-face {
+  font-family: Bebas;
+  src: url(BebasNeue-Regular.ttf);
+}
+
+body {
+  background-color: #e9ecef;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
 #counter {
+  background-color: #6c757d;
+  border-radius: 50px;
+  padding: 50px 25px;
+  width: 100%;
+  max-width: 650px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,6 +158,8 @@
 }
 #imgcontainer #pic {
   width: 100%;
+  max-width: 500px;
+  border-radius: 50px;
 }
 
 #score {
@@ -19,7 +169,57 @@
 }
 
 #score h1 {
+  padding: 25px 0;
   font-size: 16px;
   font-size: 4vw;
-  font-family: sans-serif;
+  font-family: Bebas;
+  color: white;
+  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000,
+    2px 2px 0 #000;
+}
+
+#controls {
+  display: flex;
+  justify-content: center;
+}
+
+.btn {
+  display: inline-block;
+  padding: 0.7em 1.4em;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 0.15em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: Bebas;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 1.7em;
+  color: #ffffff;
+  background-color: #3369ff;
+  box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17);
+  text-align: center;
+  position: relative;
+}
+
+.btn:disabled {
+  background-color: #343a40;
+}
+
+.red {
+  color: red;
+}
+
+.green {
+  color: green;
+}
+
+.button6:active {
+  top: 0.1em;
+}
+
+@media all and (max-width: 30em) {
+   a.button6 {
+    display: block;
+    margin: 0.4em auto;
+  }
 }
